# XG-LSPaintBoard

./: .clang-format  .gitignore  API.md  CMakeLists.txt  LSPaintBoard.cpp  buildpython.ps1  config.json  readme.md  requirements.txt  test.cpp
include/spdlog/fmt/bundled/: base.h  format.h
python/: GetPaint.spec  LSPaint.py  LSPaint.spec  gen_value.py  gen_value.spec  get_paint.py  get_paint.spec  paint.py  png_to_rgb.py  png_to_rgb.spec  rgb_to_png.py  rgb_to_png.spec
src/: logo.rc
